--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chathelper",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "High-level chat client API that makes sending messages between computers(using http) easy.",
   "main": "lib/index.js",
   "types": "lib",
@@ -10,6 +10,7 @@
   },
   "keywords": [
     "socket",
+    "server sent events",
     "chat",
     "server",
     "client",
@@ -19,8 +20,10 @@
   "author": "WeServe Technologies",
   "license": "ISC",
   "dependencies": {
+    "@types/eventsource": "^1.1.2",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.14",
+    "eventsource": "^1.0.7",
     "express": "^4.17.1",
     "queue-fifo": "^0.2.6",
     "xmlhttprequest": "^1.8.0"
